2017-11-11  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: Parameter of SL and SR is regarded as 1 if omitted.

	* vt_edit.c:
	  - {copy|erase}_area() are used in vt_edit_scroll_{right|left}ward()
	    instead of vt_edit_{copy|erase}_area().
	  - The third argument of erase_area() is fixed in
	    vt_edit_scroll_leftward_from_cursor().

2017-11-11  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: DECSR is supported.

2017-11-10  Araki Ken  <arakiken@users.sf.net>

	* num_of_xxx -> num_xxx

2017-11-10  Araki Ken  <arakiken@users.sf.net>

	* vt_cursor.[ch]: Functions whose return values are not used return void.

	* vt_edit.[ch]:
	  - horizontal_tabs() moves cursor downward if edit->wraparound_ready_line is set.
	  - horizontal_tabs() checkes edit->hmargin_beg.
	  - vt_edit_set_{h|v}margin() move cursor to the top-left corner.
	  - vt_edit_set_use_hmargin() doesn't move cursor.

	* vt_screen.h, vt_parser.c: Minor fixes.

2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* ui_im.h, ui_screen.c: write_to_status_line is added to ui_im_event_listener_t
	  if DEBUG is defined.

	* vt_screen.c: change_edit() calls vt_set_modified_all() only if both current
	  screen->edit and new edit aren't screen->status_edit.

2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* vt_model.c: Whether vt_model_get_num_of_filled_rows == 0 or not is not checked
	  in vt_model_resize().

2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* vt_edit.c: vt_edit_resize() moves cursor to the bottom line if cursor position
	  is outside of the screen after resizing.

	* vt_model.c: vt_mode_get_num_of_filled_rows() uses
	  vt_line_get_num_of_filled_chars_except_spaces() instead of vt_line_is_empty().

	* im_skk.c:
	  - cand_screen -> status_screen
	  - start_candidate is added to struct im_skk.

2017-11-05  Araki Ken  <arakiken@users.sf.net>

	* vt_screen.c: change_edit() changes screen->main_edit correctly.

	* vt_parser.c: vt_set_pty_winsize() is called in processing DECSSDT.
