@@ -1,5 +1,12 @@
 2017-11-11  Araki Ken  <arakiken@users.sf.net>
 
+	* vt_edit.c: vt_edit_fill_area() applies bce fg/bg colors to a character to be filled.
+
+	* vt_screen.[ch]: vt_screen_fill_area() is changed from a function to a wrapper macro
+	  of vt_edit_fill_area().
+
+2017-11-11  Araki Ken  <arakiken@users.sf.net>
+
 	* vt_parser.c: Parameter of SL and SR is regarded as 1 if omitted.
 
 	* vt_edit.c:
